--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,6 @@ skipsdist = True
 [testenv]
 passenv = *
 deps = -rrequirements/test.txt
-commands = python -m unittest discover tests
+commands =
+  coverage run --append -m unittest discover tests
+  coverage report
