--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,12 +7,15 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    strategy:
+            matrix:
+                python: [3.6, 3.7, 3.8, 3.9, '3.10']
     steps:
       - uses: actions/checkout@v1
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: "3.x"
+          python-version: ${{ matrix.python }}
       - name: Install Tox and any other packages
         run: |
           python -m pip install --upgrade pip
