--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,11 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python: [3.6, 3.7, 3.8, 3.9, '3.10']
+                python: ['3.x']
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v1
             - name: Setup Python
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v1
               with:
                   python-version: ${{ matrix.python }}
             - name: Install Tox and any other packages
