--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,10 @@ on: [push, pull_request]
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.22
         strategy:
             matrix:
-                python: ['3.x']
+                python: [3.6, 3.7, 3.8, 3.9, '3.10']
         steps:
             - uses: actions/checkout@v1
             - name: Setup Python
