--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,9 @@ jobs:
                 python: [3.7, 3.8, 3.9, '3.10', '3.11', '3.12']
                 urllib3-line: ["lt2", "ge2"]
                 exclude:
-                  - python-version: "3.7"
+                  - python: "3.7"
                     urllib3-line: "ge2"
-                  - python-version: "3.8"
+                  - python: "3.8"
                     urllib3-line: "ge2"
         steps:
             - uses: actions/checkout@v1
