--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,16 +6,16 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
-            matrix:
-                python: [3.7, 3.8, 3.9, '3.10', '3.11', '3.12']
-                urllib3-line: ["lt2", "ge2"]
-                exclude:
-                  - python: "3.7"
-                    urllib3-line: "ge2"
-                  - python: "3.8"
-                    urllib3-line: "ge2"
+      matrix:
+        python: [3.7, 3.8, 3.9, '3.10', '3.11', '3.12']
+        urllib3-line: ["lt2", "ge2"]
+        exclude:
+          - python: "3.7"
+            urllib3-line: "ge2"
+          - python: "3.8"
+            urllib3-line: "ge2"
     steps:
       - uses: actions/checkout@v1
       - name: Set up Python
