--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
         runs-on: ubuntu-22.04
         strategy:
             matrix:
-                python: [3.7, 3.8, 3.9, '3.10', '3.11', '3.12']
+                python: [3.6, 3.7, 3.8, 3.9, '3.10', '3.11', '3.12']
                 urllib3-line: ["lt2", "ge2"]
                 exclude:
                   - python: "3.7"
