chore(ci): disable fail fast

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,7 @@ jobs:
     build:
         runs-on: ubuntu-22.04
         strategy:
+            fail-fast: false
             matrix:
                 python: [3.7, 3.8, 3.9, '3.10', '3.11', '3.12', '3.13']
                 urllib3-line: ["lt2", "ge2"]
