--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,11 +1,8 @@
 requests_toolbelt>=1.0.0
-urllib3<3
 
-# ------------ Python >= 3.9 ------------
+urllib3<3; python_version >= "3.9"
+urllib3!=2.0.0,<3; python_version < "3.9"
+
 requests>=2.32.2; python_version >= "3.9"
-
-# ------------ 3.7 <= Python < 3.9 ------------
 requests>=2.22.0,<2.32; python_version >= "3.7" and python_version < "3.9"
-
-# ------------ Python < 3.7 ------------
 requests>=2.22.0,<2.28; python_version < "3.7"
