--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,3 +1,8 @@
-requests>=2.22.0
-requests_toolbelt==0.10.1
-urllib3==1.26.*
+requests_toolbelt>=1.0.0
+
+urllib3<3; python_version >= "3.9"
+urllib3!=2.0.0,<3; python_version < "3.9"
+
+requests>=2.32.2; python_version >= "3.9"
+requests>=2.22.0,<2.32; python_version >= "3.7" and python_version < "3.9"
+requests>=2.22.0,<2.28; python_version < "3.7"
